--- a/selene.toml
+++ b/selene.toml
@@ -1,5 +1,4 @@
+std = "roblox+testez"
+
 [rules]
-undefined_variable = "allow"
-unused_variable = "allow"
-multiple_statements = "allow"
-incorrect_standard_library_use = "allow"
+parenthese_conditions = "allow"
